force-app/main/default/objects/Asset/fields/Invoice_number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_number__c</fullName>
    <label>Invoice number</label>
    <type>TextArea</type>
</CustomField>