force-app/main/default/objects/Asset/fields/Is_in_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Is_in_Warranty__c</fullName>
    <formula>AND(TODAY() &gt;= Warrranty_from_date__c, TODAY() &lt;= Warranty_to_date__c)</formula>
    <label>Is in Warranty</label>
    <type>Checkbox</type>
</CustomField>