force-app/main/default/objects/Asset/fields/Warranty_to_date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_to_date__c</fullName>
    <label>Warranty to date</label>
    <type>Date</type>
</CustomField>