force-app/main/default/objects/Asset/fields/Warrranty_from_date__c.field-meta.xml
<CustomField>
    <fullName>Warrranty_from_date__c</fullName>
    <label>Warrranty from date</label>
    <type>Date</type>
</CustomField>